View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028972 | Open CASCADE | OCCT:Application Framework | public | 2017-08-04 12:02 | 2017-09-29 16:29 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | normal | Severity | text | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028972: A not useful message is printed on copying of data in OCAF | ||||
Description | A not useful message is printed on copying of data in OCAF. It happens if copying is performed within the same document. It prints "SAME Data" many many times filling-in the console window... Indeed, the message is quite useless. | ||||
Steps To Reproduce | Recompile TKLCAF with OCCT_DEBUG precompiler option. Run Draw: pload ALL NewDoc D SetInteger D 0:1 23 CopyLabel D 0:1 0:2 THE SAME Data | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR28972 has been created by vro. SHA-1: 30118b09a3cd520fa6fa20219d682e968a7a530b Detailed log of new commits: Author: vro Date: Fri Aug 4 13:42:42 2017 +0300 0028972: A not useful message is printed on copying of data in OCAF |
|
http://jenkins-test-10.nnov.opencascade.com:8080/view/CR28972-master/view/COMPARE/ |
|
Reviewed. Please, test. |
|
Combination - OCCT branch : CR28972 : SHA-1: 30118b09a3cd520fa6fa20219d682e968a7a530b Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 5 (5 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: Windows: OCCT Total CPU difference: 17330.010689098726 / 17295.75286949859 [+0.20%] Producst Total CPU difference: 7688.758886599963 / 7720.302288799964 [-0.41%] Linux: OCCT Total CPU difference: 19451.89000000023 / 19456.560000000376 [-0.02%] Products Total CPU difference: 7703.40000000009 / 7725.120000000072 [-0.28%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR28972 has been deleted by kgv. SHA-1: 30118b09a3cd520fa6fa20219d682e968a7a530b |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-08-04 12:02 | vro | New Issue | |
2017-08-04 12:02 | vro | Assigned To | => vro |
2017-08-04 13:43 | git | Note Added: 0069111 | |
2017-08-04 13:45 | vro | Assigned To | vro => mpv |
2017-08-04 13:45 | vro | Status | new => resolved |
2017-08-04 13:45 | vro | Steps to Reproduce Updated | |
2017-08-07 08:53 | vro | Note Added: 0069131 | |
2017-08-17 09:58 | mpv | Note Added: 0069502 | |
2017-08-17 09:58 | mpv | Assigned To | mpv => bugmaster |
2017-08-17 09:58 | mpv | Status | resolved => reviewed |
2017-08-17 12:35 | bugmaster | Note Added: 0069517 | |
2017-08-17 12:35 | bugmaster | Status | reviewed => tested |
2017-08-18 12:53 | bugmaster | Changeset attached | => occt master f97095fa |
2017-08-18 12:53 | bugmaster | Status | tested => verified |
2017-08-18 12:53 | bugmaster | Resolution | open => fixed |
2017-08-18 12:57 | bugmaster | Target Version | 7.4.0 => 7.2.0 |
2017-08-18 12:59 | bugmaster | Test case number | => Not required |
2017-08-18 17:00 | git | Note Added: 0069648 | |
2017-09-29 16:17 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:29 |
|
Status | verified => closed |