0028972: A not useful message is printed on copying of data in OCAF